firefox font wrap fix

--- a/stylesheets/main/main.css
+++ b/stylesheets/main/main.css
@@ -161,7 +161,7 @@ body {
 #about p {
 	text-align: center;
 	margin: 2em 2em 6em 2em;
-	font-size: 1em;
+	font-size: .9em;
 	color: white;
 }
 
